# frangipani

./: MANIFEST.in  README.md  channel_names.md  pyproject.toml  roadmap.md
frangipani/: __main__.py  central_widget.py
frangipani/components/: api.py  components.py
frangipani/driver/: __init__.py  driver.py  driver_info.py  pool.py  pool_storable.py  pool_store.py  pool_store_json.py  source_identifier.py  target_identifier.py  updater.py
frangipani/engine/: __init__.py  configuration.py  driver_updater.py  engine.py  resolver.py  solver.py
frangipani/fixture_definition/: __init__.py  fixture_definition.py  fixture_definition_library.py  parameter_definition.py  parameter_resolution_enum.py  parameter_type_enum.py  patch_item_converter.py  store.py  store_json.py
frangipani/launcher/: __init__.py
frangipani/layer/: __init__.py  layer.py  stack.py  stack_store.py  stack_store_json.py
frangipani/math/: interpolator.py
frangipani/patch/: __init__.py  patch.py  patch_address.py  patch_item.py  patch_item_converter.py  patch_item_storable.py  patch_storable.py  store.py  store_json.py
frangipani/resources/: __init__.py
frangipani/scripts/: make_generic_fixture_definitions_file.py
frangipani/time_provider/: __init__.py  time_provider.py
frangipani/web_server/: __init__.py  process_wrapper.py  shared-memory.py  (+3 more)
scripts/: demo.drivers.json  demo.layerstack.json  demo.patch.json  demo.webserver.json  make_demo_driver_pool.py  make_demo_engine.py  make_demo_layer_stack.py  make_demo_patch.py  make_demo_web_server.py  make_generic_fixture_definitions_file.py
(+19 files in other folders)
