[build-system]
requires = [
    "dataclasses-json",
    "frangipani-web-server @ git+https://github.com/Frangitron/frangipani-web-server@main",
    "pyside6",
    "pyside6-helpers @ git+https://github.com/MrFrangipane/pyside6-helpers@main",
    "python-helpers @ git+https://github.com/MrFrangipane/python-helpers@main",
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "frangipani"
description = "Lighting software"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron", "lighting", "midi", "osc", "artnet"]
version = "0.0.0"

[tool.setuptools]
include-package-data = true

[tool.hatch.metadata]
allow-direct-references = true
